--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,10 @@ jinja2==3.1.2
 pymongo==4.6.1
 motor==3.3.2
 aiohttp==3.9.1
+PyJWT==2.8.0
+requests==2.31.0
+asyncpg==0.29.0
+chromadb==0.4.22
+sentence-transformers==2.2.2
+psycopg2
+numpy==1.26.4
