--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,10 @@ jobs:
           script: |
             set -xe
             cd /home/ec2-user/MrFrenchRules
+
             git fetch origin
             git reset --hard origin/main
-            pip3 install -r requirements.txt   
+
+            pip3 install -r requirements.txt --user
             sudo systemctl restart mrfrench
+            sudo systemctl status mrfrench --no-pager -l
