--- a/requirements-core.txt
+++ b/requirements-core.txt
@@ -10,17 +10,13 @@ aiohttp==3.9.1
 PyJWT==2.8.0
 requests==2.31.0
 asyncpg==0.29.0
-torch==2.1.2+cpu
--f https://download.pytorch.org/whl/torch_stable.html
-sentence-transformers==2.2.2
 psycopg2
 numpy==1.26.4
 bcrypt==4.0.1
-# Document processing
+
+# Document processing (safe/light)
 pypdf==3.17.4
 python-docx==1.1.0
 python-pptx==0.6.23
 pdfplumber==0.10.0
-# Vector database support
 pgvector==0.2.4
-chromadb==0.4.22
