--- a/requirements.txt
+++ b/requirements.txt
@@ -23,5 +23,6 @@ python-pptx==0.6.23
 pdfplumber==0.10.0
 # Vector database support
 pgvector==0.2.4
-chromadb==0.4.22
+chromadb==1.4.1
+# chromadb==0.4.22
 boto3==1.42.1
