--- a/requirements.txt
+++ b/requirements.txt
@@ -10,11 +10,11 @@ aiohttp==3.9.1
 PyJWT==2.8.0
 requests==2.31.0
 asyncpg==0.29.0
-torch==2.1.2+cpu
--f https://download.pytorch.org/whl/torch_stable.html
-sentence-transformers==2.2.2
+# torch==2.1.2+cpu
+# -f https://download.pytorch.org/whl/torch_stable.html
+# sentence-transformers==2.2.2
 psycopg2
-numpy==1.26.4
+# numpy==1.26.4
 bcrypt==4.0.1
 # Document processing
 pypdf==3.17.4
@@ -22,7 +22,7 @@ python-docx==1.1.0
 python-pptx==0.6.23
 pdfplumber==0.10.0
 # Vector database support
-pgvector==0.2.4
+# pgvector==0.2.4
 chromadb==1.4.1
 # chromadb==0.4.22
 boto3==1.42.1
