--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,10 @@ message (2).txt
 *.temp
 temp/
 tmp/
+
+# Terraform
+terraform/.terraform/
+terraform/.terraform.lock.hcl
+terraform/terraform.tfstate*
+terraform/terraform.tfvars
+terraform/*.tfplan
